@@ -1,0 +1,21 @@
+#!/bin/bash
+
+set -e
+
+####
+## Functions
+####
+
+function enable_mod() {
+    # This function runs the initial configuration the module needs once it is installed
+    timeout 15 freshclam --quiet
+}
+
+
+####
+## Calls
+####
+
+enable_mod
+
+exit 0
