@@ -2,6 +2,10 @@ HEAD
 	+ Set version to 8.0.0
 	+ Remove ClamAV dependencies version
 	+ Update stubs
+	+ Remove unused freshclamEBoxDir method
+	+ Workaround for Systemd warning
+	+ Create enable-module script
+	+ Add freshclam command when the module is enable to reduce issues
 7.1.0
 	+ Bump version number
 7.0.3
